// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary should render expense summary for a single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    £1.95
  </p>
</div>
`;

exports[`ExpenseSummary should render expense summary for multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    £1,568.12
  </p>
</div>
`;
